@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-10-05T00:35:17Z",
+  "timestamp" : "2024-10-09T00:35:39Z",
   "count_outdated" : 503,
   "uniques_outdated" : 330,
-  "count" : 504,
-  "uniques" : 331,
+  "count" : 505,
+  "uniques" : 332,
   "clones" : [
     {
       "timestamp": "2024-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
